# PostgresORM

./: .gitignore  README.md  pyproject.toml
postgresorm/: main.py  utils.py
postgresorm/db/: models.py  operations.py
postgresorm/post/: post.py  post_generator.py
tests/: models.py  test_db.py  test_post.py
